crates/lang-parse/tests/snapshots/parser__parser_addition identifier.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..10,
            statements: StatementList {
                span: 0..10,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..10,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: [],
                        expr: BinaryOperation(
                            BinaryOperation {
                                span: 0..10,
                                lhs: QualifiedName(
                                    QualifiedName {
                                        span: 0..6,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [
                                                    Whitespace(
                                                        Whitespace(
                                                            " ",
                                                        ),
                                                    ),
                                                ],
                                            ),
                                        },
                                        parts: [
                                            Identifier {
                                                span: 0..6,
                                                name: "length",
                                            },
                                        ],
                                    },
                                ),
                                op: Spanned {
                                    span: 7..8,
                                    value: Add,
                                },
                                rhs: Literal(
                                    Literal {
                                        span: 9..10,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        literal: Integer(
                                            IntegerLiteral {
                                                span: 9..10,
                                                value: 1,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
