crates/lang-parse/tests/snapshots/parser__parser_array access.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xcb7be3be36b6ae84",
        output_hash: "0xf6a5581ffd157be3",
        tree: (
            span: (
                start: 0,
                end: 6,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 6,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 6,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: ElementAccess((
                        span: (
                            start: 0,
                            end: 6,
                        ),
                        expr: QualifiedName((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parts: [
                                (
                                    span: (
                                        start: 0,
                                        end: 3,
                                    ),
                                    name: "foo",
                                ),
                            ],
                        )),
                        element_chain: [
                            (
                                span: (
                                    start: 3,
                                    end: 6,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                inner: ArrayElement(Literal((
                                    span: (
                                        start: 4,
                                        end: 5,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 4,
                                            end: 5,
                                        ),
                                        value: 1,
                                        raw: "1",
                                    )),
                                ))),
                            ),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
