crates/lang-parse/tests/snapshots/parser__parser_array binary ops.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..17,
            statements: StatementList {
                span: 0..17,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..17,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: Attributes(
                            [],
                        ),
                        expr: BinaryOperation(
                            BinaryOperation {
                                span: 0..17,
                                lhs: ArrayList(
                                    ArrayListExpression {
                                        span: 0..6,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        items: [
                                            ArrayItem {
                                                span: 1..2,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                expr: Literal(
                                                    Literal {
                                                        span: 1..2,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 1..2,
                                                                value: 1,
                                                                raw: "1",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                            ArrayItem {
                                                span: 3..4,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                expr: Literal(
                                                    Literal {
                                                        span: 3..4,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 3..4,
                                                                value: 2,
                                                                raw: "2",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ],
                                        unit: Some(
                                            Unit {
                                                span: 5..6,
                                                name: "\"",
                                            },
                                        ),
                                    },
                                ),
                                op: Spanned {
                                    span: 7..9,
                                    value: Equal,
                                },
                                rhs: ArrayList(
                                    ArrayListExpression {
                                        span: 10..17,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        items: [
                                            ArrayItem {
                                                span: 11..12,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                expr: Literal(
                                                    Literal {
                                                        span: 11..12,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 11..12,
                                                                value: 1,
                                                                raw: "1",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                            ArrayItem {
                                                span: 13..14,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                expr: Literal(
                                                    Literal {
                                                        span: 13..14,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 13..14,
                                                                value: 2,
                                                                raw: "2",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ],
                                        unit: Some(
                                            Unit {
                                                span: 15..17,
                                                name: "cm",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
